Compiler/naranja/parser/grammar/RemoteCallParser.py
# Generated from ./RemoteCall.g4 by ANTLR 4.7.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class RemoteCallParser ( Parser ):

    grammarFileName = "RemoteCall.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'\"'", "'.'", "'{'", "'}'", "'='", "','", 
                     "'('", "')'", "';'", "':'", "'list<'", "'>'", "'set<'", 
                     "'map<'", "'[[callback]]'", "'include'", "'exception'", 
                     "'enum'", "'struct'", "'service'", "'throws'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "Callback", 
                      "Include", "Exception", "Enum", "Struct", "Service", 
                      "Throws", "Number", "Identifier", "WhiteSpace", "Other" ]

    RULE_document = 0
    RULE_statement = 1
    RULE_include = 2
    RULE_structure = 3
    RULE_exception = 4
    RULE_enumeration = 5
    RULE_enumerationValues = 6
    RULE_service = 7
    RULE_function = 8
    RULE_declaration = 9
    RULE_args = 10
    RULE_arg = 11
    RULE_someType = 12
    RULE_listType = 13
    RULE_setType = 14
    RULE_mapType = 15
    RULE_regularType = 16

    ruleNames =  [ "document", "statement", "include", "structure", "exception", 
                   "enumeration", "enumerationValues", "service", "function", 
                   "declaration", "args", "arg", "someType", "listType", 
                   "setType", "mapType", "regularType" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    Callback=15
    Include=16
    Exception=17
    Enum=18
    Struct=19
    Service=20
    Throws=21
    Number=22
    Identifier=23
    WhiteSpace=24
    Other=25

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class DocumentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RemoteCallParser.StatementContext)
            else:
                return self.getTypedRuleContext(RemoteCallParser.StatementContext,i)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = RemoteCallParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,0,self._ctx)
            while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1+1:
                    self.state = 34
                    self.matchWildcard() 
                self.state = 39
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,0,self._ctx)

            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RemoteCallParser.Include) | (1 << RemoteCallParser.Exception) | (1 << RemoteCallParser.Enum) | (1 << RemoteCallParser.Struct) | (1 << RemoteCallParser.Service))) != 0):
                self.state = 40
                self.statement()
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
                while _alt!=1 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1+1:
                        self.state = 41
                        self.matchWildcard() 
                    self.state = 46
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def include(self):
            return self.getTypedRuleContext(RemoteCallParser.IncludeContext,0)


        def structure(self):
            return self.getTypedRuleContext(RemoteCallParser.StructureContext,0)


        def exception(self):
            return self.getTypedRuleContext(RemoteCallParser.ExceptionContext,0)


        def enumeration(self):
            return self.getTypedRuleContext(RemoteCallParser.EnumerationContext,0)


        def service(self):
            return self.getTypedRuleContext(RemoteCallParser.ServiceContext,0)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = RemoteCallParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 57
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RemoteCallParser.Include]:
                self.enterOuterAlt(localctx, 1)
                self.state = 52
                self.include()
                pass
            elif token in [RemoteCallParser.Struct]:
                self.enterOuterAlt(localctx, 2)
                self.state = 53
                self.structure()
                pass
            elif token in [RemoteCallParser.Exception]:
                self.enterOuterAlt(localctx, 3)
                self.state = 54
                self.exception()
                pass
            elif token in [RemoteCallParser.Enum]:
                self.enterOuterAlt(localctx, 4)
                self.state = 55
                self.enumeration()
                pass
            elif token in [RemoteCallParser.Service]:
                self.enterOuterAlt(localctx, 5)
                self.state = 56
                self.service()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IncludeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Include(self):
            return self.getToken(RemoteCallParser.Include, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(RemoteCallParser.Identifier)
            else:
                return self.getToken(RemoteCallParser.Identifier, i)

        def getRuleIndex(self):
            return RemoteCallParser.RULE_include

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInclude" ):
                listener.enterInclude(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInclude" ):
                listener.exitInclude(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInclude" ):
                return visitor.visitInclude(self)
            else:
                return visitor.visitChildren(self)




    def include(self):

        localctx = RemoteCallParser.IncludeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_include)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(RemoteCallParser.Include)
            self.state = 60
            self.match(RemoteCallParser.T__0)
            self.state = 61
            self.match(RemoteCallParser.Identifier)
            self.state = 62
            self.match(RemoteCallParser.T__1)
            self.state = 63
            self.match(RemoteCallParser.Identifier)
            self.state = 64
            self.match(RemoteCallParser.T__0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StructureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Struct(self):
            return self.getToken(RemoteCallParser.Struct, 0)

        def Identifier(self):
            return self.getToken(RemoteCallParser.Identifier, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RemoteCallParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(RemoteCallParser.DeclarationContext,i)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_structure

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStructure" ):
                listener.enterStructure(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStructure" ):
                listener.exitStructure(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStructure" ):
                return visitor.visitStructure(self)
            else:
                return visitor.visitChildren(self)




    def structure(self):

        localctx = RemoteCallParser.StructureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_structure)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(RemoteCallParser.Struct)
            self.state = 67
            self.match(RemoteCallParser.Identifier)
            self.state = 68
            self.match(RemoteCallParser.T__2)
            self.state = 70 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 69
                self.declaration()
                self.state = 72 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==RemoteCallParser.Number):
                    break

            self.state = 74
            self.match(RemoteCallParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ExceptionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Exception(self):
            return self.getToken(RemoteCallParser.Exception, 0)

        def Identifier(self):
            return self.getToken(RemoteCallParser.Identifier, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RemoteCallParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(RemoteCallParser.DeclarationContext,i)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_exception

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterException" ):
                listener.enterException(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitException" ):
                listener.exitException(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitException" ):
                return visitor.visitException(self)
            else:
                return visitor.visitChildren(self)




    def exception(self):

        localctx = RemoteCallParser.ExceptionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_exception)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(RemoteCallParser.Exception)
            self.state = 77
            self.match(RemoteCallParser.Identifier)
            self.state = 78
            self.match(RemoteCallParser.T__2)
            self.state = 80 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 79
                self.declaration()
                self.state = 82 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==RemoteCallParser.Number):
                    break

            self.state = 84
            self.match(RemoteCallParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnumerationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Enum(self):
            return self.getToken(RemoteCallParser.Enum, 0)

        def Identifier(self):
            return self.getToken(RemoteCallParser.Identifier, 0)

        def enumerationValues(self):
            return self.getTypedRuleContext(RemoteCallParser.EnumerationValuesContext,0)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_enumeration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumeration" ):
                listener.enterEnumeration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumeration" ):
                listener.exitEnumeration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumeration" ):
                return visitor.visitEnumeration(self)
            else:
                return visitor.visitChildren(self)




    def enumeration(self):

        localctx = RemoteCallParser.EnumerationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_enumeration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(RemoteCallParser.Enum)
            self.state = 87
            self.match(RemoteCallParser.Identifier)
            self.state = 88
            self.match(RemoteCallParser.T__2)
            self.state = 89
            self.enumerationValues()
            self.state = 90
            self.match(RemoteCallParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EnumerationValuesContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(RemoteCallParser.Identifier, 0)

        def Number(self):
            return self.getToken(RemoteCallParser.Number, 0)

        def enumerationValues(self):
            return self.getTypedRuleContext(RemoteCallParser.EnumerationValuesContext,0)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_enumerationValues

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEnumerationValues" ):
                listener.enterEnumerationValues(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEnumerationValues" ):
                listener.exitEnumerationValues(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEnumerationValues" ):
                return visitor.visitEnumerationValues(self)
            else:
                return visitor.visitChildren(self)




    def enumerationValues(self):

        localctx = RemoteCallParser.EnumerationValuesContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_enumerationValues)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(RemoteCallParser.Identifier)
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RemoteCallParser.T__4:
                self.state = 93
                self.match(RemoteCallParser.T__4)
                self.state = 94
                self.match(RemoteCallParser.Number)


            self.state = 99
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RemoteCallParser.T__5:
                self.state = 97
                self.match(RemoteCallParser.T__5)
                self.state = 98
                self.enumerationValues()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ServiceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Service(self):
            return self.getToken(RemoteCallParser.Service, 0)

        def Identifier(self):
            return self.getToken(RemoteCallParser.Identifier, 0)

        def function(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RemoteCallParser.FunctionContext)
            else:
                return self.getTypedRuleContext(RemoteCallParser.FunctionContext,i)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_service

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterService" ):
                listener.enterService(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitService" ):
                listener.exitService(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitService" ):
                return visitor.visitService(self)
            else:
                return visitor.visitChildren(self)




    def service(self):

        localctx = RemoteCallParser.ServiceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_service)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self.match(RemoteCallParser.Service)
            self.state = 102
            self.match(RemoteCallParser.Identifier)
            self.state = 103
            self.match(RemoteCallParser.T__2)
            self.state = 105 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 104
                self.function()
                self.state = 107 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << RemoteCallParser.T__10) | (1 << RemoteCallParser.T__12) | (1 << RemoteCallParser.T__13) | (1 << RemoteCallParser.Callback) | (1 << RemoteCallParser.Identifier))) != 0)):
                    break

            self.state = 109
            self.match(RemoteCallParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class FunctionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def someType(self):
            return self.getTypedRuleContext(RemoteCallParser.SomeTypeContext,0)


        def Identifier(self):
            return self.getToken(RemoteCallParser.Identifier, 0)

        def Callback(self):
            return self.getToken(RemoteCallParser.Callback, 0)

        def args(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RemoteCallParser.ArgsContext)
            else:
                return self.getTypedRuleContext(RemoteCallParser.ArgsContext,i)


        def Throws(self):
            return self.getToken(RemoteCallParser.Throws, 0)

        def getRuleIndex(self):
            return RemoteCallParser.RULE_function

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction" ):
                listener.enterFunction(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction" ):
                listener.exitFunction(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = RemoteCallParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RemoteCallParser.Callback:
                self.state = 111
                self.match(RemoteCallParser.Callback)


            self.state = 114
            self.someType()
            self.state = 115
            self.match(RemoteCallParser.Identifier)
            self.state = 116
            self.match(RemoteCallParser.T__6)
            self.state = 118
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RemoteCallParser.Number:
                self.state = 117
                self.args()


            self.state = 120
            self.match(RemoteCallParser.T__7)
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RemoteCallParser.Throws:
                self.state = 121
                self.match(RemoteCallParser.Throws)
                self.state = 122
                self.match(RemoteCallParser.T__6)
                self.state = 123
                self.args()
                self.state = 124
                self.match(RemoteCallParser.T__7)


            self.state = 129
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==RemoteCallParser.T__5 or _la==RemoteCallParser.T__8:
                self.state = 128
                _la = self._input.LA(1)
                if not(_la==RemoteCallParser.T__5 or _la==RemoteCallParser.T__8):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self):
            return self.getTypedRuleContext(RemoteCallParser.ArgContext,0)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = RemoteCallParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_declaration)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.arg()
            self.state = 132
            self.match(RemoteCallParser.T__8)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self):
            return self.getTypedRuleContext(RemoteCallParser.ArgContext,0)


        def args(self):
            return self.getTypedRuleContext(RemoteCallParser.ArgsContext,0)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = RemoteCallParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_args)
        try:
            self.state = 139
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 134
                self.arg()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.arg()
                self.state = 136
                self.match(RemoteCallParser.T__5)
                self.state = 137
                self.args()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Number(self):
            return self.getToken(RemoteCallParser.Number, 0)

        def someType(self):
            return self.getTypedRuleContext(RemoteCallParser.SomeTypeContext,0)


        def Identifier(self):
            return self.getToken(RemoteCallParser.Identifier, 0)

        def getRuleIndex(self):
            return RemoteCallParser.RULE_arg

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArg" ):
                listener.enterArg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArg" ):
                listener.exitArg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = RemoteCallParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(RemoteCallParser.Number)
            self.state = 142
            self.match(RemoteCallParser.T__9)
            self.state = 143
            self.someType()
            self.state = 144
            self.match(RemoteCallParser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SomeTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listType(self):
            return self.getTypedRuleContext(RemoteCallParser.ListTypeContext,0)


        def setType(self):
            return self.getTypedRuleContext(RemoteCallParser.SetTypeContext,0)


        def mapType(self):
            return self.getTypedRuleContext(RemoteCallParser.MapTypeContext,0)


        def regularType(self):
            return self.getTypedRuleContext(RemoteCallParser.RegularTypeContext,0)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_someType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSomeType" ):
                listener.enterSomeType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSomeType" ):
                listener.exitSomeType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSomeType" ):
                return visitor.visitSomeType(self)
            else:
                return visitor.visitChildren(self)




    def someType(self):

        localctx = RemoteCallParser.SomeTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_someType)
        try:
            self.state = 150
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [RemoteCallParser.T__10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.listType()
                pass
            elif token in [RemoteCallParser.T__12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.setType()
                pass
            elif token in [RemoteCallParser.T__13]:
                self.enterOuterAlt(localctx, 3)
                self.state = 148
                self.mapType()
                pass
            elif token in [RemoteCallParser.Identifier]:
                self.enterOuterAlt(localctx, 4)
                self.state = 149
                self.regularType()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ListTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regularType(self):
            return self.getTypedRuleContext(RemoteCallParser.RegularTypeContext,0)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_listType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListType" ):
                listener.enterListType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListType" ):
                listener.exitListType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitListType" ):
                return visitor.visitListType(self)
            else:
                return visitor.visitChildren(self)




    def listType(self):

        localctx = RemoteCallParser.ListTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_listType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.match(RemoteCallParser.T__10)
            self.state = 153
            self.regularType()
            self.state = 154
            self.match(RemoteCallParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class SetTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regularType(self):
            return self.getTypedRuleContext(RemoteCallParser.RegularTypeContext,0)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_setType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSetType" ):
                listener.enterSetType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSetType" ):
                listener.exitSetType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSetType" ):
                return visitor.visitSetType(self)
            else:
                return visitor.visitChildren(self)




    def setType(self):

        localctx = RemoteCallParser.SetTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_setType)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(RemoteCallParser.T__12)
            self.state = 157
            self.regularType()
            self.state = 158
            self.match(RemoteCallParser.T__11)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MapTypeContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def regularType(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(RemoteCallParser.RegularTypeContext)
            else:
                return self.getTypedRuleContext(RemoteCallParser.RegularTypeContext,i)


        def getRuleIndex(self):
            return RemoteCallParser.RULE_mapType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMapType" ):
                listener.enterMapType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMapType" ):
                listener.exitMapType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMapType" ):
                return visitor.visitMapType(self)
            else:
                return visitor.visitChildren(self)




    def mapType(self):
